Fixing some spacing

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ header, footer {
 header {
   top: 0;
   margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 footer {
